fix necessary things on mobile devices

--- a/style.css
+++ b/style.css
@@ -710,6 +710,7 @@ footer ul li {
     height: 455px;
     width: 95%;
     left: 0%;
+    display: none;
   }
   .illustration-laptop {
     margin-left: -40px;
